--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-	"name": "cchiles/laravel-rackspace-cloudqueue",
-	"description": "Rackspace CloudQueue driver for Laravel Queue",
-	"require": {
-		"php": ">=5.3.0",
-		"rackspace/php-opencloud": "1.9.*"
-	},
-	"autoload": {
-		"psr-4": {
-			"cchiles\\RackspaceCloudQueue\\": "src/"
-		}
-	},
-	"minimum-stability": "dev"
+  "name": "cchiles/laravel-rackspace-cloudqueue",
+  "description": "Rackspace CloudQueue driver for Laravel Queue",
+  "require": {
+    "illuminate/queue": "5.0.*",
+    "rackspace/php-opencloud": "1.14.*"
+  },
+  "autoload": {
+    "psr-4": {
+      "cchiles\\RackspaceCloudQueue\\": "src/"
+    }
+  },
+  "minimum-stability": "dev"
 }
