--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   },
   "autoload": {
     "psr-4": {
-      "cchiles\\RackspaceCloudQueue\\": "src/"
+      "faulker\\RackspaceCloudQueue\\": "src/"
     }
   },
   "minimum-stability": "dev"
