--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,15 @@
       "Faulker\\RackspaceCloudQueue\\": "src/"
     }
   },
+  "require-dev": {
+    "phpunit/phpunit": "5.*",
+    "orchestra/testbench": "~3.1",
+    "mockery/mockery": "^0.9.5"
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Faulker\\RackspaceCloudQueue\\Tests\\": "tests/"
+    }
+  },
   "minimum-stability": "dev"
 }
